[gd_scene load_steps=2 format=3 uid="uid://b6x8v0j6y5n3q"]

[ext_resource type="Script" uid="uid://dy3xbmyjirywi" path="res://main.gd" id="1_0k4m3"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0k4m3")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 0
offset_top = 30.0
offset_right = 721.0
offset_bottom = 46.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.46
theme_override_font_sizes/font_size = 24
text = "URL History"

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+"

[node name="ConfigButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "âš™"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HistoryList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddURLPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AddURLPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="AddURLPanel/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="AddURLPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Add New URL"

[node name="CloseButton" type="Button" parent="AddURLPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="URLLabel" type="Label" parent="AddURLPanel/VBoxContainer"]
layout_mode = 2
text = "URL:"

[node name="URLLineEdit" type="LineEdit" parent="AddURLPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter URL here"

[node name="TagLabel" type="Label" parent="AddURLPanel/VBoxContainer"]
layout_mode = 2
text = "Tags:"

[node name="TagLineEdit" type="LineEdit" parent="AddURLPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter tags (comma separated)"

[node name="SubmitButton" type="Button" parent="AddURLPanel/VBoxContainer"]
layout_mode = 2
text = "Submit"

[node name="StatusLabel" type="Label" parent="AddURLPanel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddButton" to="." method="_on_add_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ConfigButton" to="." method="_on_config_pressed"]
[connection signal="pressed" from="AddURLPanel/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_pressed"]
[connection signal="pressed" from="AddURLPanel/VBoxContainer/SubmitButton" to="." method="_on_submit_pressed"]
